--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -11,7 +11,7 @@
           {{>header}}
 
    
-    <p>{{name}}</p>
+    <p>This site is created by Deepu K B.It uses data from mapbox.com and weatherstack.com</p>
     </div>
 
 
